# SecRandom-C-FLTK

./: .gitignore  CMakeLists.txt  README.md  界面风格规范.md
.cache/clangd/index/: AppController.cpp.3FE1B8B9B84FCFDA.idx  AppController.h.703A84CE2FC37FDB.idx  DataManager.cpp.B5D0DB090F6680E6.idx  DataManager.h.D49B002F56E39538.idx  HistoryWindow.cpp.FDD13939FD356A11.idx  HistoryWindow.h.7678BE0BD0D23316.idx  MainWindow.cpp.AB68CBD481414068.idx  MainWindow.h.8D51BC09AFB2005C.idx  SecRandom.cpp.DFFA49D0EC38D4AC.idx  SecRandom.h.D7AFCB4B1A6CBF2F.idx  Settings.cpp.11E33C885C485ED3.idx  Settings.h.5AA5DC532AB621B3.idx  SettingsWindow.cpp.4C750D069030B529.idx  SettingsWindow.h.7A6A5EEE83CC17E6.idx  StudentManageWindow.cpp.853937FED91FBD7D.idx  StudentManageWindow.h.713D3D15038AE284.idx  StudentRecords.h.2B112209D9F2DD4F.idx  UIStyle.cpp.571F740DEA25EA02.idx  UIStyle.h.4477C007B89D924F.idx  main.cpp.A8B6A5539BBDC857.idx
data/: attendance.csv  draw_history.csv  settings.csv  students.csv  students_stats.csv
include/: AppController.h  DataManager.h  SecRandom.h  Settings.h  StudentRecords.h  UIStyle.h
include/ui/: HistoryWindow.h  MainWindow.h  SettingsWindow.h  StudentManageWindow.h
src/: AppController.cpp  DataManager.cpp  SecRandom.cpp  Settings.cpp  UIStyle.cpp  main.cpp
src/ui/: HistoryWindow.cpp  MainWindow.cpp  SettingsWindow.cpp  StudentManageWindow.cpp
